tests/snapshots/run_wpt_conformance__onnx_minValue_as_Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "minValue as Infinity",
    "onnx",
    "PASS",
)
